# Chess_Recognition

./: .gitignore  README.md
android/: README.md
backend/: chess_recognision_main.py  chess_recognision_model.py  dataset_maker.py  dataset_shafler.py  draw_helper.py  find_intersection.py  json_to_labels.py  (+2 more)
chesslens_server/: .dockerignore  Dockerfile  pyproject.toml  server.py  train_yolo.ipynb
chesslens_server/datasets/: .gitignore
chesslens_server/datasets/board_segmentation_set/ChessRed/: json_to_labels_board.py
chesslens_server/datasets/board_segmentation_set/ChessRed/labels/: test.cache  train.cache  val.cache
chesslens_server/datasets/board_segmentation_set/homemade_dataset/labels/: test.cache
chesslens_server/datasets/piece_recognition_set/ChessReD/: README.dataset.txt  json_to_labels.py
chesslens_server/datasets/piece_recognition_set/ChessReD/labels/: train.cache  val.cache
chesslens_server/datasets/piece_recognition_set/s_github/: README.dataset.txt  dataset_make.py
chesslens_server/datasets/piece_recognition_set/s_roboflow_2/: data.yaml
chesslens_server/datasets/piece_recognition_set/self_training_set_part1/labels/: test.cache
chesslens_server/datasets/piece_recognition_set/self_training_set_part2/labels/: test.cache  val.cache
chesslens_server/models/yolo_board_seg/: args.yaml  results.csv
chesslens_server/models/yolo_chess_piece/: args.yaml  results.csv
chesslens_server/scripts/: dataset_maker.py  dataset_shuffler.py  main.py  saved_position.py
chesslens_server/src/chess_rec/: chess_position_recognizer.py  draw_helper.py
(+160 files in other folders)
