[tool.poetry]
name = "chesslens-server"
version = "0.1.0"
description = "chess pieces recognition websocket server"
authors = ["FloudMe77 <marecik.dariusz@gmail.com>"]
packages = [{ include = "chess_rec", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.116.1,<0.117.0"
numpy = ">=2.2,<3.0"
opencv-python = ">=4.12.0.88,<5.0.0.0"
uvicorn = { extras = ["standard"], version = ">=0.35.0,<0.36.0" }
matplotlib = ">=3.10.6,<4.0.0"
torch = { version = ">=2.5.1,<3.0.0", source = "pytorch" }
torchvision = { version = ">=0.20.1,<0.21.0", source = "pytorch" }
torchaudio = { version = ">=2.5.1,<3.0.0", source = "pytorch" }
ultralytics = ">=8.3.191,<9.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
